# warp-cloudflare-gui-rust

./: .gitattributes  Cargo.toml  LICENSE  ReadME.md  build.rs  bun.lockb  package.json  tailwind.config.js  vite.config.js  warp-gui.desktop
src/: api.rs  app.html  embed.rs  main.rs  mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs
src/components/: error.rs  modal.rs
src/pages/: home.rs  mod.rs  settings.rs
src/routes/: +layout.ts  +page.svelte
src/routes/components/: AlertComponent.svelte  SwitchComponent.svelte
src/routes/icons/: github.svelte  rust.svelte  svelte.svelte  tauri.svelte
src/routes/settings/: +page.svelte
src/theme/: button.rs  container.rs  mod.rs  toggler.rs
ui/: app.slint  dialog.slint  settings.slint
ui/components/: CustomComboBox.slint  CustomToggleSwitch.slint
