[package]
name = "warp-cloudflare-gui-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.6.0", default-features = false, features = ["backend-qt", "renderer-femtovg", "compat-1-2"] }

[build-dependencies]
slint-build = "1.6.0"

[profile.release]
opt-level = "s"
lto = "fat"
debug = true
codegen-units = 1
panic = 'abort'
strip = true
debug-assertions = false
overflow-checks = false
