[package]
name = "warp-cloudflare-gui-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["debug", "image", "advanced"] }
rust-embed = "8.5.0"
bytes = "1.7.2"


[build-dependencies]

[profile.release]
opt-level = "z"
lto = "fat"
debug = true
codegen-units = 1
panic = 'abort'
strip = true
debug-assertions = false
overflow-checks = false
